--- a/linux_ad.html
+++ b/linux_ad.html
@@ -19,6 +19,7 @@
           height: 800px;
           background-color: dimgrey;
           border: 1px solid black;
+          margin-left: 100px;
         }
         
 
@@ -27,7 +28,7 @@
           height: 10px;
           border: 0px;
           background-color: lime;
-          translate: 50px -605px;
+          translate: 150px -605px;
           animation: 
             blink-nchild2 .5s step-end infinite;
         }
@@ -47,7 +48,7 @@
           height: 10px;
           border: 0px;
           background-color: lime;
-          translate: 120px -615px;
+          translate: 220px -615px;
           animation: 
             blink-nchild3 1s step-end infinite;
         }
@@ -128,7 +129,7 @@
           flex: 0 0 100%;
           align-items: center;
           justify-content: center;
-          translate: 0px -600px;
+          translate: 150px -600px;
         }
 
         .card {
