--- a/linux_ad.html
+++ b/linux_ad.html
@@ -122,6 +122,7 @@
 
         .carousel {
           margin: auto;
+          margin-bottom: 300px;
           padding: 5px 0;
           width: 1170px;
           overflow: hidden;
@@ -130,6 +131,7 @@
           align-items: center;
           justify-content: center;
           translate: 50px -400px;
+          border: 2px solid lime;
         }
 
         .card {
